sass/site/header/_header.scss
.header-image {
	max-height: 60vh;
	overflow: hidden;

	img {
		display: block;
		width: 100vw;
	}
}
.site-header {
	position: fixed;
	top:0;
    left:0;
    right:0;
    z-index:170;
    margin:0 auto;
	font-family: $font__rubik;
	color: #fff;
	background-color: #191d48;
	width:100%;
    
   
    //height: 60px;

/*.site-header {
	position: fixed;
	padding: 1em;
	font-family: $font__rubik;
	color: #fff;
	background-color: #191d48;
	//width: 960px;
	//margin: 0px auto;
	//z-index: 170;*/

	
	@media screen and (min-width: $query__small) {
		padding: 1em 2em;
	}


}

.site-branding {
	display: flex;
	min-height: 65px;
}

.custom-logo-link {
	margin-right: 1em;
	img {
		display: block;
		height: 65px;
		width: auto;
	}
}

.site-branding__text {
	display: flex;
	flex-direction: column;
	justify-content: center;
	height: 65px;
}

.site-title {
	margin-left: -17px;
	padding: 0;
	font-size: 2em;
	font-weight: 100;
	line-height: 1em;
	margin-top: 10px;


	
	a {
		color: white;
		text-decoration: none;
		
		&:hover,
		&:focus {
			text-decoration: underline;
		}
	}
}

.site-description {
	margin: 0;
	font-size: .9em;
	font-style: italic;
	font-weight: 100;
}

@media screen and (min-width: $query__medium) {
	.site-header {
		display: flex;
		justify-content: space-between;
		height: 90px;
	}
	
	.site-branding {
		width: 35%;
		flex: 1 0 auto;
	}
	
	.site-navigation {
		width: 55%;
	}

}    

/* 
Header Menu
*/
@import "header-menu";

